Fix gameboard item layout on small screens

--- a/src/scss/phy/gameboard.scss
+++ b/src/scss/phy/gameboard.scss
@@ -65,7 +65,3 @@ button.btn.delete-button {
   background-color: $color-neutral-100;
   border-left: solid 3px var(--subject-color-500);
 }
-
-.question-progress-icon {
-  min-width: 16px;
-}
